[package]
name = "bottleneck"
version = "0.1.0"
authors = ["ZUO, JACOB [ITUIS] <zuo@iastate.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.2.0"

[dev-dependencies.futures]
version = "0.3.1"
features = ["thread-pool"]
